--- a/LP.css
+++ b/LP.css
@@ -35,6 +35,7 @@ div #Carrossel{
     animation-iteration-count: infinite;
     width: 400%;
     display: flex;
+    gap: 10px;
     margin: 0;
     padding: 0;
     list-style: none;
