--- a/LP.css
+++ b/LP.css
@@ -5,7 +5,9 @@
     box-sizing: border-box;
 }
  
- 
+ body{
+    background:linear-gradient(to right,#ffbaff,#b690fe, #3e1dc6)
+ }
 #menu{
     color: black;
     font-family: 'Courier New', Courier, monospace;
@@ -18,6 +20,7 @@ li  {
     margin: 16px;
 }
 a {
+    padding: 0px;
     color: black;
     font-size: larger;
     text-decoration: none;
@@ -112,8 +115,10 @@ p{
     margin-top: 30px;
 }
 li:hover>p{
-    background-color: purple;
+    background-color: #b690fe;
    visibility: visible;
    transform: scale(1.2);
    display: block;
+   border-radius: 5px;
+
 }
