--- a/LP.css
+++ b/LP.css
@@ -6,7 +6,9 @@
 }
  
  body{
-    background:linear-gradient(to right,#ffbaff,#b690fe, #3e1dc6)
+    background:linear-gradient(to right,#ffbaff,#b690fe);
+    overflow-x: hidden;
+    height: 150vh;
  }
 #menu{
     color: black;
@@ -26,17 +28,17 @@ a {
     text-decoration: none;
 }
 a:hover{
-    color: rgb(247, 154, 154);
+    color: #3e1dc6;
     font-size: x-large;
     text-decoration: underline;
+    margin: 0%;
 }
 h1{
     text-align: center;
-    margin: 8%;
+    margin: 4%;
 }
 div #Carrossel{
-    width: 100%;
-    overflow: hidden;
+    width: 5%;
 }
 #Carrossel ul{
     animation-name: carrossel;
@@ -48,6 +50,7 @@ div #Carrossel{
     margin: 0;
     padding: 0;
     list-style: none;
+    
     }
 
  #Carrossel ul:hover{
@@ -115,10 +118,18 @@ p{
     margin-top: 30px;
 }
 li:hover>p{
-    background-color: #b690fe;
+    background-color: #fbfbf8;
    visibility: visible;
-   transform: scale(1.2);
+   transform: scale(1.3);
    display: block;
    border-radius: 5px;
 
 }
+#history{
+    border: 1px solid black;
+    background-color: white;
+}
+.texto{
+    border: 1px solid black;
+    color: black;
+    margin: 50px;}
