--- a/LP.css
+++ b/LP.css
@@ -26,11 +26,13 @@ a {
     padding: 0px;
     color: black;
     font-size: larger;
+    font-weight: bolder;
     text-decoration: none;
 }
 a:hover{
     color: #3e1dc6;
     font-size: x-large;
+    font-weight: bolder;
     text-decoration: underline;
     margin: 0%;
 }
@@ -106,6 +108,7 @@ div #Carrossel{
      transform: scale(1.2);}
 .Mochi{
     border: 2px solid pink;
+    top: 150;
     width: 250px;
     height: 250px;
 }
@@ -123,10 +126,12 @@ p{
 li:hover>p{
     background-color: #fbfbf8;
    visibility: visible;
-   transform: scale(1.3);
+   width: 250px;
+   height: 100px;
+   transform: translateY(-80px);
    display: block;
    border-radius: 5px;
-
+   
 }
 #history{
     border: 1px solid black;
