--- a/LP.css
+++ b/LP.css
@@ -134,7 +134,7 @@ li:hover>p{
    border-radius: 5px;
    
 }
-#history{
+#sobre{
     background-color: #f19ba6;
     width: 900px; 
     height: 250px;
