--- a/LP.css
+++ b/LP.css
@@ -12,11 +12,13 @@
     height: 150vh;
  }
 #menu{
+    padding-bottom:15px ;
     color: white;
     font-family: 'Courier New', Courier, monospace;
     background-color: #f19ba6;
 }
 ul{
+    
     text-align: center;
 }
 li  {
@@ -29,6 +31,7 @@ a {
     font-size: larger;
     font-weight: bolder;
     text-decoration: none;
+    
 }
 a:hover{
     font-size: x-large;
