--- a/LP.css
+++ b/LP.css
@@ -12,14 +12,14 @@
     height: 150vh;
  }
 #menu{
-    padding-top:-50px ;
     color: white;
     font-family: 'Courier New', Courier, monospace;
     background-color: #f19ba6;
 }
 #icon{
-    position: relative;
-    bottom: -20px;
+    position: absolute;
+    top: -24px;
+    left: 15px;
     width: 100px;
     margin: 0 auto;
     padding:0 auto;
@@ -29,7 +29,7 @@ ul{
     text-align: center;
 }
 li  {
-    display: inline;
+    display: inline-block;
     margin: 16px;
 }
 a {
@@ -60,8 +60,8 @@ div #Carrossel{
     width: 400%;
     display: flex;
     gap: 10px;
-    margin: 25px;
-    padding: 25px;
+    margin: 23px;
+    padding: 23px;
     list-style: none;
     
     }
