Avaliações dos clientes

--- a/LP.css
+++ b/LP.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 *{
     margin: 0px;
     padding: 0px;
@@ -14,7 +15,7 @@
  }
 #menu{
     color: white;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Poppins', sans-serif;
     background-color: #f19ba6;
 }
 #icon{
@@ -29,7 +30,7 @@
 li, ul{
      display: flex;
      padding: 8px;
-     gap: 10px;
+     gap: 5px;
     align-items: center;
     justify-content: center;
    
@@ -55,12 +56,11 @@ a:hover{
 h1{
     text-align: center;
     margin: 17px;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Poppins',sans-serif;
     font-weight: bolder;
 }
 
 p{
-    border: 1px solid pink;
     visibility: hidden;
     width: 250px;
     box-sizing: border-box;
@@ -72,6 +72,8 @@ p{
     width: 900px; 
     height: 250px;
     margin: 0 auto;
+    position: relative;
+    top: 4%;
 }
  .texto{
     background-color: #fcfbfb;
@@ -115,6 +117,10 @@ p{
     color: white;
     border-radius:50%;
 }
+#Demonstrações{
+    position: relative;
+    top: 8%;
+}
 #demonstration{
     visibility: visible;
     text-align: center;
@@ -134,7 +140,7 @@ ul li{
 
 }
 li img{
-    border: 1px solid rgb(223, 90, 112);
+    border: 2px solid rgb(223, 90, 112);
     border-radius: 15px;
     width: 180px;
     height: 260px;
@@ -160,7 +166,6 @@ span, button{
 }
 span{
     position: relative;
-    left: 13px;
     font-family: 'Times New Roman', Times, serif;
 }
 button{
@@ -174,9 +179,22 @@ button{
     height: 230px;
     width: 193px;
     position: relative;
+    top: 13px;
     visibility: visible;
 }
 h4{
     font-size: larger;
     font-family: 'Courier New', Courier, monospace;
+}
+#Evaluations{
+position: relative;
+top: 10%;
+}
+ .coments{
+    display: flex;
+    flex-direction: row;
+    gap: 56px;
+}
+.comentarios{
+    visibility: visible;
 }
