--- a/LP.css
+++ b/LP.css
@@ -49,22 +49,13 @@ a:hover{
     text-decoration: underline;
     margin: 0%;
 }
-.section{
-    position: absolute;
-    top: 120px;
-}
+ 
 h1{
+    text-size-adjust: 50px;
     text-align: center;
     margin: 17px;
     font-family: 'Poppins',sans-serif;
     font-weight: bolder;
-}
-
-p{
-    visibility: hidden;
-    width: 250px;
-    box-sizing: border-box;
-    margin-top: 30px;
 }
 
 #sobre{
@@ -76,6 +67,9 @@ p{
     top: 4%;
 }
  .texto{
+    width: 250px;
+    box-sizing: border-box;
+    margin-top: 30px;
     background-color: #fcfbfb;
     border: 1px solid black;
     color: black;
@@ -89,6 +83,7 @@ p{
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 1);
 }
 #Chef{
+    background-attachment: fixed;
     width: 250px;
     height: 250px;
     position: relative;
@@ -97,6 +92,7 @@ p{
     z-index: 1;
 }
 .bolha{
+    background-attachment: fixed;
     background-color: #56010c;
     width: 220px;
     height: 220px;
@@ -108,6 +104,7 @@ p{
      color: white;
 }
 .bolha2{
+    background-attachment: fixed;
     background-color: #56010c;
     width: 110px;
     height: 110px;
@@ -129,6 +126,7 @@ p{
     margin-left: 15px;
 }
 ul li{
+    background-attachment: fixed;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -184,7 +182,6 @@ button{
     height: 230px;
     width: 193px;
     position: relative;
-    top: 13px;
     visibility: visible;
 }
 h4{
@@ -195,3 +192,11 @@ h4{
 position: relative;
 top: 10%;
 }
+#clientes  {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+
