--- a/LP.css
+++ b/LP.css
@@ -8,7 +8,7 @@
 }
  
  body{
-    background-color:#e7dddf;
+    background-color:#7a594d;
     overflow-x: hidden;
     height: 150vh;
     max-width: 100%;
@@ -16,7 +16,7 @@
 #menu{
     color: white;
     font-family: 'Poppins', sans-serif;
-    background-color: #f19ba6;
+    background-color: #7a5738;
 }
 #icon{
     position: absolute;
@@ -59,57 +59,60 @@ h1{
 }
 
 #sobre{
-    background-color: #f19ba6;
-    width: 900px; 
+    background-size: cover;
+    background-attachment: fixed;
+    background-image: url(img/Bakery.jpg);
+    width: auto; 
     height: 250px;
     margin: 0 auto;
     position: relative;
     top: 4%;
 }
- .texto{
+.history{
+    color: white;
+    left: 7%;
+}
+ .texto {
     width: 250px;
     box-sizing: border-box;
     margin-top: 30px;
-    background-color: #fcfbfb;
+    background-color: blur;
     border: 1px solid black;
-    color: black;
+    color: white;
     visibility: visible;
     text-transform:  capitalize;
     margin: 10px;
     padding: 3px;
     border-radius: 5px;
     position: relative;
-    left: 25px;
+    left: 15%;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 1);
 }
 #Chef{
-    background-attachment: fixed;
     width: 250px;
     height: 250px;
     position: relative;
-    left: 450px;
+    left: 60%;
     top: -250px;
     z-index: 1;
 }
 .bolha{
-    background-attachment: fixed;
     background-color: #56010c;
     width: 220px;
     height: 220px;
     border: 1px solid pink;
     position: relative;
-     left: 550px;
+     left: 69%;
      top: -526px;
      border-radius:50%;
      color: white;
 }
 .bolha2{
-    background-attachment: fixed;
     background-color: #56010c;
     width: 110px;
     height: 110px;
     position: relative;
-    left: 425px;
+    left: 59%;
     top: -555px;
     color: white;
     border-radius:50%;
@@ -117,6 +120,11 @@ h1{
 #Demonstrações{
     position: relative;
     top: 8%;
+}
+h3{
+    position: relative;
+    color: White;
+    left: 7%;
 }
 #demonstration{
     visibility: visible;
@@ -126,7 +134,6 @@ h1{
     margin-left: 15px;
 }
 ul li{
-    background-attachment: fixed;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -138,7 +145,6 @@ ul li{
 
 }
 li img{
-    background-attachment: fixed;
     border: 2px solid rgb(223, 90, 112);
     border-radius: 15px;
     width: 180px;
@@ -149,8 +155,10 @@ li img{
 
 }
 .card{
-     transition: transform 0.5s ease;
+     transition: transform 0.5s linear;
+     right: 6%;
     visibility: hidden;
+    border-radius: 5px;
 }
 
 h2, .card{
@@ -172,12 +180,13 @@ span{
 }
 button{
     padding:5px;
-    background-color: #f19ba6;
+    background-color: #7a594d;
+    color: white;
     font-weight: bold;
 }
  li:hover .card{
-    transition: transform 0.3s ease;
-    transform: rotatex(360deg) translateX(-50px);
+    transition: transform 0.7s linear;
+    transform: rotatez(360deg) translateX(-50px) ;
     background-color:#f0f3f5;
     height: 230px;
     width: 193px;
@@ -185,7 +194,10 @@ button{
     visibility: visible;
 }
 h4{
-    font-size: larger;
+    position:relative;
+    left:7%;
+    color: white;
+    font-size: 20px;
     font-family: 'Courier New', Courier, monospace;
 }
 #Evaluations{
@@ -194,9 +206,27 @@ top: 10%;
 }
 #clientes  {
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     position: relative;
+    gap: 30px;
+}
+.cliente-1{
+    width: 200px;
+    height: 150px;
 }
 
+.cliente-2{
+    width: 200px;
+    height: 180px;
+    z-index: 1;
+}
 
+.cliente-3{
+    width: 200px;
+    height: 150px;
+}
+p{
+    visibility: hidden;
+}
