--- a/LP.css
+++ b/LP.css
@@ -230,10 +230,9 @@ margin: 60px 60px;
     height: 180px;
     background-color: #f0f3f5;
     transition: 0.5s;
+    visibility: hidden;
 }
-.coments img{
-overflow: hidden;
-}
-.coments:hover img{
-    overflow: visible;
+
+#clientes:hover .coments {
+    visibility: visible;
 }
