--- a/LP.css
+++ b/LP.css
@@ -30,9 +30,8 @@
 li, ul{
      display: flex;
      padding: 8px;
-     gap: 5px;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
    
 }
 a {
