--- a/LP.css
+++ b/LP.css
@@ -6,12 +6,12 @@
     box-sizing: border-box;
     max-width: 100%;
 }
- 
+
  body{
-   background-color: #362015;
-    overflow-x: hidden;
+    background-color: #362015;
     height: 150vh;
     max-width: 100%;
+    overflow-x: hidden;
  }
 #menu{
     color: white;
@@ -193,7 +193,8 @@ button{
     visibility: visible;
 }
 h4{
-    margin: 60px 60px;
+    margin-top: 10%;
+    margin-bottom: 10%;
     position:relative;
     left:7%;
     color: white;
@@ -202,8 +203,7 @@ h4{
 }
 #Evaluations{
 position: relative;
-top: 30%;
-margin: 60px 60px;
+top: 20%;
 }
 #clientes  {
     display: flex;
@@ -212,26 +212,34 @@ margin: 60px 60px;
     align-items: center;
     position: relative;
     gap: 30px;
-    transition: 0.5s;
 }
 #clientes img{
+    z-index: 1;
     width: 180px;
     height: 180px;
     border-radius: 50%;
-    top: 0px;
+    top: 0; /*A imagem começa do ponto zero*/
     position: absolute;
 }
 #clientes:hover{
-   height: 500px;
+    scale: 0.50px;
+    top: -100px; /*A imagem sobe 100%*/
+    height: 500px;
+
 }
 .coments {
+    border-radius:60px 10px 30px;
     width: 180px;
     height: 180px;
+     text-align: center; /*para que o texto fique no centro da div */
+     padding-top: 50px; /*para que o texto fique em baixo da imagem  */
+    gap: 50px;
     background-color: #f0f3f5;
     transition: 0.5s;
     visibility: hidden;
+    position: relative;
 }
 
-#clientes:hover .coments {
+#clientes:hover .coments{
     visibility: visible;
 }
